--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-editable-material-table",
-  "version": "0.0.2",
-  "description": "An editable table, build on top of Angular Material, natively for Angular.",
+  "version": "0.0.3",
+  "description": "An editable table, built on top of Angular Material, natively for Angular.",
   "author": "valentinstn",
   "repository": {
     "type": "git",
